# ouroboros-desktop

./: .gitignore  README.md  pyproject.toml  requirements.txt  server.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CHECKLISTS.md  CREATING_SKILLS.md  DEVELOPMENT.md  ENV.md
openspec/changes/archive/2026-05-18-remove-claude-code-integration/: change.md
openspec/changes/archive/2026-05-18-remove-playwright-browser-integration/: change.md
openspec/changes/remove-claude-code-integration/: change.md
openspec/changes/remove-playwright-browser-integration/: change.md
openspec/specs/ouroboros/: ouroboros.md
ouroboros/: agent.py  agent_task_pipeline.py  claude_runtime.py  config.py  context.py  context_compaction.py  git_sync.py  loop.py  loop_tool_execution.py  onboarding_wizard.py  platform_layer.py  review.py  review_evidence.py  review_state.py  runtime_mode_policy.py  safety.py  server_runtime.py  skill_loader.py  tool_aliases.py  tool_capabilities.py
ouroboros/tools/: commit_gate.py  core.py  git.py  git_pr.py  registry.py  review_helpers.py  shell.py
prompts/: SAFETY.md  SYSTEM.md
specs/: k8s-deployment-readiness.md  remove-claude-code-integration.md  remove-pyinstaller-launcher-pipeline.md
supervisor/: git_ops.py  message_bus.py
tests/: conftest.py  test_agent_task_pipeline.py  test_block1_review_pipeline.py  test_budget_tracking.py  test_chat_logs_ui.py  test_ci_tool.py  test_claude_code_gateway.py  test_claude_runtime.py  test_commit_gate.py  test_context.py  test_docs_sync.py  test_files_ui.py  test_git_sync_unit.py  test_loop_compaction_policy.py  test_marketplace_skill_loader_migration.py  test_onboarding_wizard.py  test_openclaw_tool_aliases.py  test_per_skill_version_resync.py  test_phase7_pipeline.py  test_platform_guard.py  test_post_refactor_integration.py  test_pr_tools.py  test_repo_read_limits.py  test_review_anti_thrashing.py  test_review_calibration.py  test_review_fidelity.py  test_review_v4_33.py  test_reviewed_commit_workflow.py  test_runtime_mode_elevation.py  test_runtime_mode_gating.py  test_safety_policy.py  test_scope_review.py  test_send_photo.py  test_server_runtime.py  test_server_startup_hook.py  test_settings_runtime_regressions.py  test_skill_exec.py  test_skill_loader.py  test_smoke.py  test_smoke_e2e_post_refactor.py  (+7 more)
tests/integration/: conftest.py  test_git_sync_integration.py
web/: app.js
web/modules/: onboarding_wizard.js  settings.js  settings_ui.js
