[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ouroboros"
version = "5.8.1"
description = "Self-creating AI agent with constitution, background consciousness, and persistent identity"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Anton Razzhigaev"},
]
keywords = ["ai-agent", "self-modifying", "autonomous", "llm", "openrouter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.66.0",
    "requests",
    "httpx",
    "dulwich",
    "huggingface_hub",
    "starlette",
    "python-multipart",
    "uvicorn[standard]",
    "websockets",
    "pytest>=7.0",
    "a2a-sdk[http-server]>=0.3.20,<1.0.0",
    # Declared explicitly so ``ouroboros/contracts/api_v1.py`` can rely on
    # ``typing_extensions.NotRequired`` on Python 3.10 (``typing.NotRequired``
    # is only available on 3.11+). In practice many transitive deps already
    # pull it in, but the frozen contract must not depend on that.
    "typing_extensions>=4.5.0",
]

[project.scripts]
ouroboros-web = "server:main"

[project.urls]
Homepage = "https://github.com/joi-lab/ouroboros-desktop"
Repository = "https://github.com/joi-lab/ouroboros-desktop"
Issues = "https://github.com/joi-lab/ouroboros-desktop/issues"
"Previous Version (Colab)" = "https://github.com/joi-lab/ouroboros"

[project.optional-dependencies]
a2a = ["a2a-sdk[http-server]>=0.3.20,<1.0.0"]
local-model = ["llama-cpp-python"]
# ``playwright`` is a test-only dependency: it is no longer used at runtime
# (browser automation tools were removed), only by the retained UI/E2E smoke
# tests (test_ui_smoke_playwright.py, test_smoke_e2e_post_refactor.py).
test = ["testcontainers>=4.0", "pytest-mock>=3.10", "requests", "playwright"]
all = ["a2a-sdk[http-server]>=0.3.20,<1.0.0", "llama-cpp-python", "huggingface_hub"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
# Default local runs exclude the `integration` marker so contributors do not
# accidentally burn provider tokens on every `pytest`. CI Tier 2.5 opts in
# explicitly with `pytest -m integration` (the CLI -m overrides addopts -m).
addopts = "-q --tb=short -m 'not integration and not ui_browser and not docker'"
markers = [
    "integration: requires real provider API keys (OPENROUTER_API_KEY / OPENAI_API_KEY / ANTHROPIC_API_KEY / CLOUDRU_FOUNDATION_MODELS_API_KEY); excluded from default local runs, opt in via `pytest -m integration`",
    "ui_browser: launches the real Ouroboros web UI in host/direct mode; excluded from default local runs",
    "docker: requires Docker daemon (Testcontainers integration tests)",
]

[tool.setuptools]
py-modules = ["server"]

[tool.setuptools.packages.find]
include = ["ouroboros*", "supervisor*", "web*"]

[tool.setuptools.package-data]
web = [
    "*.html",
    "*.js",
    "*.css",
    "*.png",
    "*.jpg",
    "modules/*.js",
    "providers/*.svg",
    "providers/*.png",
    "providers/*.ico",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
